# RealtimeAudioVis

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  vcpkg.json
.github/workflows/: ci.yml
include/: AudioManager.h  Curve.hpp  Globals.h  PerformanceManager.h  PolyCurve.hpp
shaders/: basic.frag  basic.vert  default.frag  default.geom  default.vert  doubleSym.geom  symmetric.geom
src/: AudioManager.cpp  Curve.cpp  PerformanceManager.cpp  PolyCurve.cpp  bench.cpp  main.cpp
tests/: audio_manager_test_class.cpp  audio_manager_test_class.h  graphics_test_class.h  test_main.cpp  test_shader_compilation.cpp  test_silence.cpp  test_smoothing.cpp
